# medibot-project

./: .env.example  .gitignore  CLAUDE.md  README.md  launch.sh  pyproject.toml  requirements.txt
api/: auth.py  dependencies.py  main.py
api/routes/: auth.py  chat.py  collections.py  health.py
core/: access.py  config.py  embeddings.py  llm.py  schemas.py  vector_store.py
docs/api/: 01_auth.md  02_dependencies.md  03_routes.md
docs/ingestion/: 01_parse.md  02_chunk.md  03_metadata.md  04_embed.md  05_upsert.md
docs/rag/: 01_router.md  02_retrieval.md  03_rerank.md  04_sql_rag.md  05_graph.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: api.ts  types.ts
ingestion/: __main__.py  chunker.py  metadata.py  parser.py  pipeline.py
rag/: graph.py  rerank.py  retrieval.py  router.py  sql_rag.py
tests/: test_api.py  test_core_access.py  test_core_schemas.py  test_rag_router.py  test_sql_rag.py
