[project]
name = "medibot"
version = "0.1.0"
description = "MediBot — Hybrid RAG with RBAC for MediAssist Health Network"
requires-python = ">=3.11"
dependencies = [
    # Core
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.3.0",

    # Document parsing
    "docling>=2.14.0",

    # Vector store
    "qdrant-client>=1.10.1",
    "langchain-qdrant>=0.1.4",

    # Embeddings (local — no API cost)
    "sentence-transformers>=3.1.1",
    "langchain-huggingface>=0.0.3",
    "huggingface-hub>=0.24.6",

    # LangChain core + LangGraph
    "langchain>=0.2.16",
    "langchain-core>=0.2.38",
    "langgraph>=0.2.28",

    # LLM providers (all installed; active one chosen via LLM_PROVIDER in .env)
    "langchain-groq>=0.1.9",
    "langchain-anthropic>=0.1.23",
    "langchain-openai>=0.1.25",

    # BM25 sparse vectors (used by ingestion pipeline)
    "fastembed>=0.3.6",

    # Reranking (local cross-encoder)
    "FlagEmbedding>=1.2.11",

    # FastAPI backend
    "fastapi>=0.111.1",
    "uvicorn[standard]>=0.30.5",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",

    # HTTP client (for tests + internal calls)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "ingestion", "rag", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
